--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "smart-contract",
+  "name": "flaex-smart-contracts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "npx hardhat compile",
-    "test": "npx hardhat test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.1"
-  },
-  "dependencies": {
-    "@aave/core-v3": "^1.16.2",
-    "@uniswap/v3-core": "^1.0.1"
+    "hardhat": "^2.12.2"
   }
 }
