--- a/package.json
+++ b/package.json
@@ -4,13 +4,65 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat test",
+    "coverage": "npx hardhat coverage --testfiles ",
+    "test-no-compile": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat test --no-compile",
+    "first-compile": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat typechain",
+    "compile": "npx hardhat compile",
+    "lint:check": "prettier --check '(contracts|interfaces|src|test|deployments)/**/*.(sol|json|ts)'",
+    "lint:write": "prettier -w '(contracts|interfaces|src|test|deployments)/**/*.(sol|json|ts)'",
+    "format:ts": "prettier -w '(test|deployments|scripts)/**/*.ts'",
+    "size": "npx run hardhat size-contracts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.2"
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "@nomiclabs/hardhat-etherscan": "^3.1.2",
+    "@tenderly/hardhat-tenderly": "1.1.0-beta.5",
+    "@typechain/ethers-v5": "7.2.0",
+    "@typechain/hardhat": "2.3.1",
+    "@types/chai": "4.2.11",
+    "@types/lowdb": "1.0.9",
+    "@types/mocha": "7.0.2",
+    "@types/node": "14.0.5",
+    "chai": "^4.3.6",
+    "chai-bignumber": "3.0.0",
+    "defender-relay-client": "1.7.0",
+    "dotenv": "8.2.0",
+    "eth-sig-util": "2.5.3",
+    "ethereum-waffle": "3.2.0",
+    "ethereumjs-util": "7.0.2",
+    "ethers": "5.6.9",
+    "globby": "11.0.1",
+    "hardhat": "^2.12.2",
+    "hardhat-contract-sizer": "2.0.3",
+    "hardhat-dependency-compiler": "1.1.2",
+    "hardhat-deploy": "0.11.12",
+    "hardhat-gas-reporter": "1.0.8",
+    "husky": "4.2.5",
+    "keyv": "^4.5.1",
+    "lowdb": "1.0.0",
+    "prettier": "2.4.1",
+    "prettier-plugin-solidity": "1.0.0-alpha.53",
+    "pretty-quick": "3.1.1",
+    "solidity-coverage": "0.7.17",
+    "ts-generator": "0.1.1",
+    "ts-node": "8.10.2",
+    "tslint": "6.1.2",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-plugin-prettier": "2.3.0",
+    "typechain": "5.2.0",
+    "typescript": "4.4.4"
+  },
+  "dependencies": {
+    "@aave/core-v3": "^1.16.2",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-periphery": "^1.4.3",
+    "solc": "^0.8.17"
   }
 }
